src/components/Header/Header.module.css
/* Sticky header and box shadow */
header {
  top: 0;
  z-index: 999;
  position: sticky;
  box-shadow: 0px 3px 8px hsla(0, 0%, 0%, 0.15);
}

/* Show mobile header on scroll up */
.visible {
  transform: translateY(0%);
}

/* Hide mobile header on scroll down */
.hidden {
  transform: translateY(-100%);
}

.headerContainer {
  width: 100%;
  display: flex;
  margin: 0 auto;
  max-width: 1200px;
  align-items: center;
  justify-content: space-between;
}

/* Desktop layout */
.desktopLayout {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Logo */
.logoContainer img {
  height: 50px;
  transition: 0.3s ease-in;
}

/* Site navigation */
.navContainer {
  gap: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: 0.3s ease-in;
  font-family: "Oswald", sans-serif;
}

.navItems {
  gap: 1rem;
  display: flex;
  font-size: 1.25rem;
  align-items: center;
  justify-content: center;
  transition: 0.3s ease-in;
}

.navItems a {
  position: relative;
  transition: transform 0.2s ease-in, border-bottom 0.1s ease-in;
}

/* On hover, prevent hover effect on active link */
.navItems a:hover:not(.activeLink) {
  transform: translateY(-3px);
  border-bottom: 2px solid var(--primary);
}

/* Active link */
.navItems a.activeLink {
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  color: hsl(0, 0%, 100%);
  background-color: var(--primary);
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
}

/* Separator */
.separator {
  font-size: 1.5rem;
  transition: 0.3s ease-in;
}

/* Theme button */
.themeButton {
  gap: 0.5rem;
  display: flex;
  font-size: 1.25rem;
  align-items: center;
  justify-content: center;
  color: var(--text-primary);
  background-color: var(--header-bg-color);
  transition: transform 0.2s ease-in, color 0.3s ease-in;
}

.themeButton:hover {
  transform: translateY(-3px);
  color: var(--text-secondary);
}

/* Tablet responsiveness */
@media (max-width: 768px) {
  .logoContainer img {
    height: 45px;
  }

  .navContainer {
    gap: 0.75rem;
  }

  .navItems {
    gap: 0.75rem;
    font-size: 1.15rem;
  }

  .navItems a:hover:not(.activeLink) {
    border-bottom: 2px solid var(--primary);
  }

  .separator {
    font-size: 1.25rem;
  }

  .themeButton {
    font-size: 1.15rem;
  }
}

@media (max-width: 600px) {
  .logoContainer img {
    height: 40px;
  }

  .navContainer {
    gap: 0.65rem;
  }

  .navItems {
    gap: 0.65rem;
    font-size: 1rem;
  }

  .separator {
    font-size: 1.15rem;
  }

  .themeButton {
    font-size: 1rem;
  }

  .themeButton:not(.sidebarThemeButton) p {
    display: none;
  }
}

@media (max-width: 500px) {
  .separator {
    display: none;
  }

  .themeButton:not(.sidebarThemeButton) {
    display: none;
  }
}

/* Mobile layout */
.mobileLayout {
  width: 100%;
  display: none;
  align-items: center;
  justify-content: space-between;
}

/* Phone button */
.phoneButton {
  display: none;
  background: none;
  font-size: 0.95rem;
  transition: 0.3s ease-in;
  color: var(--text-primary);
}

.phoneButton:hover {
  transform: scale(1.15);
  color: var(--text-secondary);
}

/* Logo */
.mobileLogoContainer img {
  height: 45px;
}

/* Hamburger menu button */
.hamburger {
  display: none;
  background: none;
  transition: 0.3s ease-in;
  color: var(--text-primary);
}

.hamburger:hover {
  transform: scale(1.15);
  color: var(--text-secondary);
}

.hamburger i {
  transition: transform 0.3s ease-in-out;
}

.hamburger i.spin {
  animation: hamburgerSpin 0.3s ease-in-out;
}

/* Hambuger spin animation */
@keyframes hamburgerSpin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* Mobile responsiveness - hide desktop layout and show mobile layout */
@media (max-width: 480px) {
  .desktopLayout {
    display: none;
  }

  .mobileLayout {
    display: flex;
  }

  .phoneButton,
  .hamburger {
    display: block;
  }
}

/* Sidebar */
.sidebarOverlay {
  inset: 0;
  z-index: 999;
  display: flex;
  position: fixed;
  background: hsla(0, 0%, 0%, 0.75);
}

.sidebar {
  width: 100%;
  height: 100%;
  display: flex;
  padding: 1.25rem;
  max-width: 250px;
  position: relative;
  flex-direction: column;
  font-family: "Oswald", sans-serif;
  background-color: var(--header-bg-color);
}

/* Sidebar close button */
.sidebarClose {
  top: 1rem;
  right: 1.25rem;
  background: none;
  position: absolute;
  font-size: 1.15rem;
  transition: 0.3s ease-in;
  color: var(--text-primary);
}

.sidebarClose:hover {
  transform: scale(1.15);
  color: var(--text-secondary);
}

/* Sidebar site navigation */
.sidebarNavItems {
  gap: 0.75rem;
  display: flex;
  font-size: 1.25rem;
  margin-top: 2.5rem;
  flex-direction: column;
}

.sidebarNavItems a {
  gap: 0.75rem;
  display: flex;
  align-items: center;
  transition: transform 0.2s ease-in, color 0.3s ease-in-out;
}

/* On hover, prevent hover effect on active link */
.sidebarNavItems a:hover:not(.activeLink) {
  transform: translateX(5px);
  color: var(--text-secondary);
}

/* Active link */
.sidebarNavItems a.activeLink {
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  color: hsl(0, 0%, 100%);
  background-color: var(--primary);
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
}

/* Sidebar footer */
.sidebarFooter {
  padding: 0;
  gap: 0.75rem;
  display: flex;
  margin-top: auto;
  flex-direction: column;
  align-items: flex-start;
  transition: 0.3s ease-in;
  color: var(--text-secondary);
}

.sidebarFooter a {
  gap: 0.75rem;
  display: flex;
  font-size: 1.15rem;
  align-items: center;
  color: var(--text-secondary);
  transition: color 0.3s ease-in-out, transform 0.2s ease-in;
}

.sidebarFooter a:hover {
  color: var(--text-primary);
  transform: translateX(5px);
}

.sidebarThemeButton {
  gap: 1rem;
  display: flex;
  font-size: 1.15rem;
  align-items: center;
  color: var(--text-secondary);
  transition: color 0.3s ease-in-out, transform 0.2s ease-in;
}

.sidebarThemeButton:hover {
  color: var(--text-primary);
  transform: translateX(5px);
}

